Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,50 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-08-26</summary>
+
+        <div class="card">
+          <div class="card-title">Trasporti</div>
+          <div class="card-body">
+
+            <section>
+              <p>Aggiunta la sezione nei trasporti in modo da poter controllare oltre l'esperienza dell'autista anche
+                tutte le altre sezioni</p>
+              <img src="../assets/trasporti/sezione.png" width="400">
+
+              <p>In pianificazione il controllo e' stato migliorato per un miglior riepilogo</p>
+              <img src="../assets/pianificazione/controllotrasporti.png" width="auto">
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Visite Mediche</div>
+          <div class="card-body">
+
+            <section>
+              <p>Migliorata UI delle visite mediche, era superfluo il tab</p>
+              <p>Aggiunto campo Codice Trasporto. Cosi si puo' definire che e' necessaria per un Trasporto</p>
+              <img src="../assets/visitemediche/ui.png" width="400">
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Autisti Tessere</div>
+          <div class="card-body">
+
+            <section>
+              <p>Aggiunto codice trasporto della tessera</p>
+              <p>Cosi si puo' definire che e' necessaria per un Trasporto</p>
+              <img src="../assets/anagrafiche/Dipendenti/codtrasportotessera.png" width="400">
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-08-25</summary>
 
         <div class="card">
