Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,25 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-08-27</summary>
+
+        <div class="card">
+          <div class="card-title">Fix PVIR</div>
+          <div class="card-body">
+
+            <section>
+              <p>Corretta l'ordinamento degli ordini del pvir. L'ordinamento ora segue gli ordini selezionati dal mouse
+                in ordine di click come prima.</p>
+              <p>E' stato anche migliorata la gestione delle date degli ordini che non rispecchiano quelle del viaggio
+              </p>
+              <img src="../assets/pianificazione/datasuperiore.png" width="400">
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-08-26</summary>
 
         <div class="card">
