--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,24 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-08-29</summary>
+
+        <div class="card">
+          <div class="card-title">Mezzi passaggio intermodale</div>
+          <div class="card-body">
+
+            <section>
+              <p>Nel passaggio navale vengono mostrate le targhe con il passaggio gia' creato. Quando faccio ad esempio
+                apri passaggio dal planner vedo</p>
+              <img src="../assets/pianificazione/datiimbarco.png" width="400">
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+
+      <details>
         <summary>2025-08-27</summary>
 
         <div class="card">
