--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -32,6 +32,17 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-title">Calendario Presenze</div>
+          <div class="card-body">
+
+            <section>
+              <p>Creato il nuovo calendario eventi al moemento solo per visualizzazione</p>
+              <img src="../assets/anagrafiche/presenzeAutisti/calendario.png" width="400">
+            </section>
+          </div>
+        </div>
+
       </details>
 
 
