--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -21,6 +21,27 @@
         <summary>2025-08-29</summary>
 
         <div class="card">
+          <div class="card-title">Accessori in Ordine</div>
+          <div class="card-body">
+
+            <section>
+              <p>Per filtrare i mezzi prima di pianificare, se nella conferma viene attivato:</p>
+              <img src="../assets/conferme/vedipannelloaccessoriordine.png" width="400">
+              <p>Allora vengono mostrate le definizioni degli accessori definiti in anagrafica</p>
+              <img src="../assets/conferme/accessoriordine.png" width="400">
+              <p><strong>IMPORTANTE</strong></p>
+              <p>Gli accessori devono essere riassegnati, in quanto la tabella non aveva chiavi per collegare i dati</p>
+            </section>
+          </div>
+        </div>
+
+
+      </details>
+
+      <details open>
+        <summary>2025-08-29</summary>
+
+        <div class="card">
           <div class="card-title">Mezzi passaggio intermodale</div>
           <div class="card-body">
 
