Aggiunte info riguardo l'installazione dell'API

--- a/API e Applicazioni/api.html
+++ b/API e Applicazioni/api.html
@@ -16,6 +16,15 @@
       <p>Per l'installazione dell'API, è possibile guardare il video presente 
         <strong><a href="https://mega.nz/file/7wE0FSqR#DWMFybqwYR0YNXF9e6R9eCZeMhFlLSTO9VYwtT-RZOE" target="_blank">qui🔗</a></strong>
       </p>
+      <div class="tip">
+        <span class="tip-icon">ℹ️</span>
+        Quando viene installata l'api va considerato il reinderizzamento
+        <div class="tip-description">
+          Se, come URL dell'api, viene salvato l'indirizzo IP (es: 150.10.35.100), quando si tenta di accedere dall'interno della stessa rete, la connessione non funzionerà. 
+          Questo perché si sta tentando di puntare allo stesso server dal quale viene fatta la chiamata. 
+          L'unico modo per risolverlo è contattare il tecnico del cliente per far si che crei un DNS tramite il quale può gestire poi un reindirizzamento interno automatico.
+        </div>
+      </div>
       <h2>Aggiornamento</h2>
       <p>
           Per aggiornare l'API, è necessario stare attenti ad un paio di cose:
