--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,22 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-09-08</summary>
+
+        <div class="card">
+          <div class="card-title">Controllo accessi clienti TIR / TIR PLUS</div>
+          <div class="card-body">
+            <section>
+              <p>Per i clienti che utilizzano ancora <b>TIR / TIR Plus</b> è stato rafforzato il controllo degli accessi degli utenti al programma. In particolare, ogni volta che un utente aprirà un modulo dal menu, il sistema verificherà se il cliente ha il programma attivo o meno.</p></br>
+              <p>Questa modifica si è resa necessaria perché alcuni clienti, pur di non farsi bloccare il programma, lasciavano i PC accesi con l’applicativo aperto. In questo modo, anche se il programma resta attivo, nel momento in cui si tenta di aprire un modulo senza un accesso valido, il sistema genererà un errore e si chiuderà automaticamente.</p></br>
+              <p><strong>IMPORTANTE</strong></p>
+              <p>La modifica entrerà in funzione solo se il menu TIR (eseguibile <code>Server > _Versione Aggiornata > Click Beta > MenuClick</code>) sarà aggiornato alla versione datata 08/09/2025 o successiva.</p>
+            </section>
+          </div>
+        </div>
+      </details>
+
+      <details>
         <summary>2025-08-29</summary>
 
         <div class="card">
@@ -38,7 +54,7 @@
 
       </details>
 
-      <details open>
+      <details>
         <summary>2025-08-29</summary>
 
         <div class="card">
