Impostazione ore planner

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,17 +17,53 @@
     <section>
       <h2>🆕 Novità recenti</h2>
 
-      <details open>
+      <details>
+        <summary>2025-11-08</summary>
+
+        <div class="card">
+          <div class="card-title">Impostazione ore planner</div>
+          <div class="card-body">
+            <section>
+              <p>Un cliente vuole gestre i viaggi dicendo: Io a prescindere ho il camion che sta fuori X ore. Voglio
+                vedere se l'operativo lo impegna tutte le ore che sta fuori</p></br>
+              <p>Per fare questo sono necessarie queste impostazioni</p>
+              <p>Dentro alle impostazioni planner, configurazione rettangolo</p>
+              <img src="../assets/pianificazione/imporettnagolotempo.png" width="400">
+              <p>Dentro alle impostazioni planner cerca Data e attivare</p></br>
+              <img src="../assets/pianificazione/impostadatadagriglia.png" width="400">
+              <p>Dentro alle impostazioni di base di Elite</p></br>
+              <img src="../assets/pianificazione/impostazionibaseore.png" width="400">
+              <p>E' necessario definire le <strong>ore di lavoro</strong> nell'anagrafica del mezzo che sarebbero le ore
+                di suddivisione spese</p></br>
+              <p>Quando viene assegnato il viaggio con tutte queste impostazioni attiva il viaggio verra' creato con
+                <strong>Data Partenza Viaggio + Ore lavoro Mezzo</strong>
+              </p>
+              <p>questo e' il risultato sul planner</p>
+              <img src="../assets/pianificazione/rettangolotempo.png" width="400">
+            </section>
+          </div>
+        </div>
+      </details>
+
+      <details>
         <summary>2025-09-08</summary>
 
         <div class="card">
           <div class="card-title">Controllo accessi clienti TIR / TIR PLUS</div>
           <div class="card-body">
             <section>
-              <p>Per i clienti che utilizzano ancora <b>TIR / TIR Plus</b> è stato rafforzato il controllo degli accessi degli utenti al programma. In particolare, ogni volta che un utente aprirà un modulo dal menu, il sistema verificherà se il cliente ha il programma attivo o meno.</p></br>
-              <p>Questa modifica si è resa necessaria perché alcuni clienti, pur di non farsi bloccare il programma, lasciavano i PC accesi con l’applicativo aperto. In questo modo, anche se il programma resta attivo, nel momento in cui si tenta di aprire un modulo senza un accesso valido, il sistema genererà un errore e si chiuderà automaticamente.</p></br>
+              <p>Per i clienti che utilizzano ancora <b>TIR / TIR Plus</b> è stato rafforzato il controllo degli accessi
+                degli utenti al programma. In particolare, ogni volta che un utente aprirà un modulo dal menu, il
+                sistema verificherà se il cliente ha il programma attivo o meno.</p></br>
+              <p>Questa modifica si è resa necessaria perché alcuni clienti, pur di non farsi bloccare il programma,
+                lasciavano i PC accesi con l’applicativo aperto. In questo modo, anche se il programma resta attivo, nel
+                momento in cui si tenta di aprire un modulo senza un accesso valido, il sistema genererà un errore e si
+                chiuderà automaticamente.</p></br>
               <p><strong>IMPORTANTE</strong></p>
-              <p>La modifica entrerà in funzione solo se il menu TIR (eseguibile <code>Server > _Versione Aggiornata > Click Beta > MenuClick</code>) sarà aggiornato alla versione datata 08/09/2025 o successiva.</p>
+              <p>La modifica entrerà in funzione solo se il menu TIR (eseguibile
+                <code>Server > _Versione Aggiornata > Click Beta > MenuClick</code>) sarà aggiornato alla versione
+                datata 08/09/2025 o successiva.
+              </p>
             </section>
           </div>
         </div>
