--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,7 +17,7 @@
     <section>
       <h2>🆕 Novità recenti</h2>
 
-      <details>
+      <details open>
         <summary>2025-11-08</summary>
 
         <div class="card">
