salva in viaggio

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -43,6 +43,20 @@
             </section>
           </div>
         </div>
+
+        <div class="card">
+          <div class="card-title">Salva in Viaggio</div>
+          <div class="card-body">
+
+            <section>
+              <p>Se nelle impostazioni delle conferme viene attivata la funzione <strong>VEDI SALVA IN VIAGGIO</strong>
+                appare un bottone che permette di salvare direttamente in viaggio come se si usasse l'automatismo</p>
+              <img src="../assets/conferme/salvainviaggio.png" width="auto">
+              <p>ovviamente e' necessario inserire le targhe altrimenti non crea nulla</p><br>
+              <p>Se si usa anche l'automatismo per creare un viaggio, sicuramente dara' problemi</p>
+            </section>
+          </div>
+        </div>
       </details>
 
       <details>
