Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -21,6 +21,17 @@
         <summary>2025-09-11</summary>
 
         <div class="card">
+          <div class="card-title">Liste in sola lettura</div>
+          <div class="card-body">
+            <section>
+              <p>Negli ordini si possono impostare delle liste in sola lettura per evitare modifiche accidentali.</p></br>
+              <p>Nella definizione delle liste, si può attivare il flag: Rende la lista in SOLA LETTURA nella conferma</p>
+              <img src="../assets/conferme/listeinsolaletura.png" width="400">
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
           <div class="card-title">Impostazione ore planner</div>
           <div class="card-body">
             <section>
