--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -21,11 +21,26 @@
         <summary>2025-09-11</summary>
 
         <div class="card">
+          <div class="card-title">Richiesta eliminazione Viaggio</div>
+          <div class="card-body">
+            <section>
+              <p>Dalle conferme al posto di cancellare il viaggio in automatico quando rimane vuoto e' stata creata
+                l'impostazione per chiederlo</p>
+              </br>
+              <p>si chiama RICHIEDI ELIMINAZIONE VIAGGIO e si attiva dentro al modulo conferme
+              </p>
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
           <div class="card-title">Liste in sola lettura</div>
           <div class="card-body">
             <section>
-              <p>Negli ordini si possono impostare delle liste in sola lettura per evitare modifiche accidentali.</p></br>
-              <p>Nella definizione delle liste, si può attivare il flag: Rende la lista in SOLA LETTURA nella conferma</p>
+              <p>Negli ordini si possono impostare delle liste in sola lettura per evitare modifiche accidentali.</p>
+              </br>
+              <p>Nella definizione delle liste, si può attivare il flag: Rende la lista in SOLA LETTURA nella conferma
+              </p>
               <img src="../assets/conferme/listeinsolaletura.png" width="400">
             </section>
           </div>
