--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,25 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-09-15</summary>
+
+        <div class="card">
+          <div class="card-title">FATTURAZIONE ATTIVA</div>
+          <div class="card-body">
+            <section>
+              <p>Integrazione Impostazioni su modulo: </p>
+              <p>Ora in Fatturazione attiva in alto a sinistra potete vedere il tasto Impostazioni, come per il modulo riparazioni:</p>
+              </br>
+              <img src="../assets/Fatturazione/fatt_11.png" width="400">
+              <p>Premuto questo tasto si aprirà la finestra delle impostazioni, che permette al utente finale di cambiare le impostazioni di Automatismi e Visualizzazioni; inoltre c’è il tasto con il lucchetto (sotto password) che permette ai tecnici di attivare le impostazioni avanzate: 
+              </p>
+              <img src="../assets/Fatturazione/fatt_12.png" width="400">
+            </section>
+          </div>
+        </div>
+      </details>
+
+      <details>
         <summary>2025-09-11</summary>
 
         <div class="card">
