Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,21 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-09-16</summary>
+
+        <div class="card">
+          <div class="card-title">Mittenti Destinatari</div>
+          <div class="card-body">
+            <section>
+              <p>Duplicazione Mittenti Destinatari</p>
+              <p>Aggiunto il tasto DUPLICA in basso della videata per poter duplicare i Mittenti Destinatari. Si apre un ulteriore finestra dove viene riportato il cliente ed il tipo, è possibile anche non definire il cliente e mettere come tipo COMUNE a seconda che si voglia duplicare mitt/dest legati a clienti o comuni</p>
+              <img src="../assets/anagrafiche/MittentiDestinatari/mittdest_duplica.png" width="400">  
+            </section>
+          </div>
+        </div>
+      </details>
+
+      <details>
         <summary>2025-09-15</summary>
 
         <div class="card">
