--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -67,7 +67,18 @@
               <p>Ora i campi mezzo, rimorchio e autista hanno la ricerca <strong>per parola contenuta</strong></p>
               <p>Esempio scrivo “MARIO” e nella combo visualizzare tutti gli autisti che contengono la stringa “Mario”
               </p>
-              <p>E' da TESTARE</p>
+              <p>E' da testare</p>
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Targhe su tratte</div>
+          <div class="card-body">
+            <section>
+              <p>Nel chip delle tratte vengono fuori gli elementi coinvolti nel trasporto</p>
+              <img src="../assets/conferme/targheSuTratte.png" width="auto">
+              <p>Si attiva nelle conferme attivando TARGHE SU TRATTE</p>
             </section>
           </div>
         </div>
