Gestione trasferte con valori nuov

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,7 +17,27 @@
     <section>
       <h2>🆕 Novità recenti</h2>
 
+      
       <details open>
+        <summary>2025-09-23</summary>
+
+        <div class="card">
+          <div class="card-title">Gestione trasferte con valori nuovi</div>
+          <div class="card-body">
+            <section>
+              <p>Di default sono stati messi i nuovi valori.</p>
+              <p>Quando si crea un nuovo autista verra' creata la tabella <strong>ParametriTrasferte</strong> che terra' i nuovi valori</p>
+              <p>Sono modificabili al momento <strong>SOLO</strong> da database</p>
+              <br>
+              <p>E' stata creata anche la funzione di aggiornamento in modo molto semplice, basta fare tasto destro sopra la trasferta e confermare</p>
+              <img src="../assets/anagrafiche/Dipendenti/impostaPerTuttiTrasferte.png" width="400">
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-09-16</summary>
 
         <div class="card">
