Separazione punti per utente

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,8 +17,31 @@
     <section>
       <h2>🆕 Novità recenti</h2>
 
-      
       <details open>
+        <summary>2025-09-24</summary>
+
+        <div class="card">
+          <div class="card-title">Separazione punti per utente</div>
+          <div class="card-body">
+            <section>
+              <p>E' stata introdotta una nuova funzione per quanto riguarda la visibilità dei poi nel planner</p>
+              <img src="../assets/utenti/idpuntivisibili.png" width="400">
+              <p>Il fomato e': idPunto;idPunto;idPunto ma tranquilli quando fate tab c'e' una
+                <strong>validazione</strong> scritta sotto
+              </p>
+              <br>
+              <p>Qui e' possibile scrivere gli id dei punti che si vuole mostrare per utente</p>
+              <p>Non occorre attivare nulla <strong>e' una funzione standard</strong></p>
+              <p>Una volta che trova
+                popolato quel campo nell'utente filtrera' nella colonna dei punti del planner <strong>solo quei
+                  punti</strong></p>
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-09-23</summary>
 
         <div class="card">
@@ -26,10 +49,12 @@
           <div class="card-body">
             <section>
               <p>Di default sono stati messi i nuovi valori.</p>
-              <p>Quando si crea un nuovo autista verra' creata la tabella <strong>ParametriTrasferte</strong> che terra' i nuovi valori</p>
+              <p>Quando si crea un nuovo autista verra' creata la tabella <strong>ParametriTrasferte</strong> che terra'
+                i nuovi valori</p>
               <p>Sono modificabili al momento <strong>SOLO</strong> da database</p>
               <br>
-              <p>E' stata creata anche la funzione di aggiornamento in modo molto semplice, basta fare tasto destro sopra la trasferta e confermare</p>
+              <p>E' stata creata anche la funzione di aggiornamento in modo molto semplice, basta fare tasto destro
+                sopra la trasferta e confermare</p>
               <img src="../assets/anagrafiche/Dipendenti/impostaPerTuttiTrasferte.png" width="400">
             </section>
           </div>
