--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,40 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-09-25</summary>
+
+        <div class="card">
+          <div class="card-title">Combo box selezionabili in griglia</div>
+          <div class="card-body">
+            <section>
+              <p>Dentro alle impostazioni di base sotto la voce visualizzazione attivare al spunta</p>
+              <img src="../assets/impostazioni/comboelementiingriglia.png" width="400">
+              <br>
+              <p>A questo punto nei <strong>viaggi</strong> bisogna mettere visibili le seguenti colonne</p>
+              <img src="../assets/viaggi/colonneeditabili.png" width="auto">
+              <p>e refreshare la griglia</p>
+              <br>
+              <p>Le colonne diventano combo selezionabili e al cambio del mezzo se disponibili vengono anche
+                <strong>cambiate
+                  le targhe associate</strong>
+              </p>
+              <p>Dato che vengono mostrate tutte le targhe <strong>imposta anche il vettore nel viaggio</strong></p>
+              <br>
+              <p>Per confermare le modifiche selezionare i viaggi e con il tasto destro si possono salvare le modifiche
+                nel db</p>
+
+              <br>
+              <p>AVVERTENZE</p>
+              <p>le targhe al momento non si possono cancellare direttamente dalla griglia ma basta entrare nel viaggio
+                e toglierla</p>
+              <p>per un limite del componente non posso cercare tra la lista digitando da tastiera</p>
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-09-24</summary>
 
         <div class="card">
