Madò...varda modifiche

--- a/API e Applicazioni/applicazioni-portali.html
+++ b/API e Applicazioni/applicazioni-portali.html
@@ -20,9 +20,9 @@
       </ul>
     <h2>♂️Portali</h2>
       <ul>
-          <li><a href="">Portale Tracking</a></li>
-          <li><a href="">Portale CRM</a></li>
-          <li><a href="">Portale Deposito (TCF)</a></li>
+          <li><a href="portale-tracking.html">Portale Tracking</a></li>
+          <li><a href="portale-crm.html">Portale CRM</a></li>
+          <li><a href="portale-deposito.html">Portale Deposito (TCF)</a></li>
           <br/>
       </ul>
     </section>
