--- a/API e Applicazioni/api-app-index.html
+++ b/API e Applicazioni/api-app-index.html
@@ -12,6 +12,7 @@
     </header>
 
     <section>
+      <h2>Indice</h2>
       <ul>
         <li><a href="api.html">📃 Documentazione API</a></li>
         <li><a href="applicazioni-portali.html">📃 Documentazione Applicazioni e Portali</a></li>
