--- a/API e Applicazioni/app-etir.html
+++ b/API e Applicazioni/app-etir.html
@@ -32,47 +32,40 @@
 
       <h2>Impostazioni</h2>
       <ul>
-        <li><a href="percorso-archiviazione-app.html">Percorso archiviazione</a></li>
-      </ul>
+        <details>
+          <summary class="list-item-header">
+            <strong><a href="percorso-archiviazione-app.html">Percorso archiviazione ↗️</a></strong>
+          </summary>
+        </details>
 
-      <ul>
-        <li>
-          <span class="link-color-text">Elenco delle personalizzazioni</span>
+        <details>
+          <summary class="list-item-header">
+            <strong>NonMostraNumeroOrdineListaPoi</strong>
+          </summary>
+          <div class="card-body">
+            <p>Il numero dell'ordine dal quale si origina il poi non viene più mostrarto una volta attivata
+              l'impostazione.</p>
+          </div>
+        </details>
 
-          <section>
-            <details>
-              <summary class="list-item-header">
-                <strong>NonMostraNumeroOrdineListaPoi</strong>
-                <em>10 Luglio 2025</em>
-              </summary>
-              <div class="card-body">
-                <p>Il numero dell'ordine dal quale si origina il poi non viene più mostrarto una volta attivata
-                  l'impostazione.</p>
-              </div>
-            </details>
+        <details>
+            <summary class="list-item-header">
+                <strong>CONTROLLA DATA CARICO - DATA PARTENZA</strong>
+            </summary>
+            <div class="card-body">
+                <p>attivare per Mostrare un avviso quando entro in un viaggio nel quale la data di partenza cade prima della data di carico<br>
+                Questa impostazione si trova nelle impostazioni dei viaggi nella sezione Automatismi</p>
+            </div>
+        </details>
 
-            <details>
-                <summary class="list-item-header">
-                    <strong>CONTROLLA DATA CARICO - DATA PARTENZA</strong>
-                    <em>10 Luglio 2025</em>
-                </summary>
-                <div class="card-body">
-                    <p>attivare per Mostrare un avviso quando entro in un viaggio nel quale la data di partenza cade prima della data di carico<br>
-                    Questa impostazione si trova nelle impostazioni dei viaggi nella sezione Automatismi</p>
-                </div>
-            </details>
-
-            <!-- <details>
-                <summary class="list-item-header">
-                    <strong>Impostazione 3:</strong>
-                    <em>10 Luglio 2025</em>
-                </summary>
-                <div class="card-body">
-                    <p>Descrizione della terza impostazione.</p>
-                </div>
-            </details> -->
-          </section>
-        </li>
+        <details>
+            <summary class="list-item-header">
+                <strong>SalvaPosizioneEsito</strong>
+            </summary>
+            <div class="card-body">
+                <p>All'aggiunta dell'esito, vengono anche inserite le coordinate di Latutine e Longitudine (nell'esito)</p>
+            </div>
+        </details>
       </ul>
     </section>
   </div>
