--- a/Deposito/deposito-logistico.html
+++ b/Deposito/deposito-logistico.html
@@ -28,7 +28,7 @@
         <br/>
         Una volta inserito correttamente un magazzino si aprirà la schermata del modulo.
       </p>
-      <img src="/assets/deposito/deposito-home.png"/>
+      <img src="../assets/deposito/deposito-home.png"/>
 
       <h3>BARRA DI NAVIGAZIONE</h3>
       <img src="/assets/deposito/deposito-barra-navigazione.png"/>
