Finita pagina TCF

--- a/Deposito/deposito-logistico.html
+++ b/Deposito/deposito-logistico.html
@@ -247,9 +247,8 @@
 
       <h2>Clienti ✨speciali✨</h2>
       <ul>
-        <a href="tcf.html">T.C.F.</a>
+        <a href="tcf.html">T.C.F. ↗️</a>
         <br/>
-        <a>New Trasped</a>
       </ul>
     </section>
   </div>
