--- a/API e Applicazioni/applicazioni-portali.html
+++ b/API e Applicazioni/applicazioni-portali.html
@@ -18,7 +18,7 @@
           <li><a href="app-emag.html">AppEMag</a></li>
           <br/>
       </ul>
-    <h2>♂️Portali</h2>
+    <h2>🌐Portali</h2>
       <ul>
           <li><a href="portale-tracking.html">Portale Tracking</a></li>
           <li><a href="portale-crm.html">Portale CRM</a></li>
