--- a/ordini/master-lista-ordini.html
+++ b/ordini/master-lista-ordini.html
@@ -17,7 +17,7 @@
         </header>
 
         <section>
-            <h2>📖 Guida Elite</h2>
+            <h2>📖 Guida Operativo</h2>
             <ul>
                 <!-- Aggiungi altri collegamenti qui in futuro -->
                 <li>
@@ -26,13 +26,11 @@
                 <li>
                     <a href="../containertrazioni/giuda-container.html">🔳 Gestione Container</a>
                 </li>
-                <!-- <li><a href="documentazione_viaggi.html">🛣️ Pianificazione Viaggi</a></li> -->
                 <li>
                     <a href="../pianificazione/gruppi-mezzi.html">🛣️ Gruppi pianificazione</a>
                 </li>
-
                 <li>
-                    <a href="../ordini/requisiti-mezzi.html">🛣️ Requisiti Ordini</a>
+                    <a href="../ordini/requisiti-mezzi.html">⚙️ Requisiti Ordini</a>
                 </li>
             </ul>
         </section>
