--- a/API e Applicazioni/portale-crm.html
+++ b/API e Applicazioni/portale-crm.html
@@ -15,7 +15,7 @@
 
     <section>
       <h2>Motivo della sua esistenza:</h2>
-      <p>Mi scusi, ma io che cazzo ne so</p>
+      <p>Bellissimo portale che nasce come qualsiasi altro CRM e cioè per avere una gestione più precisa degli agenti e delle loro attività.</p>
     </section>
   </div>
 </body>
