--- a/API e Applicazioni/portale-tracking.html
+++ b/API e Applicazioni/portale-tracking.html
@@ -15,7 +15,38 @@
 
     <section>
       <h2>Motivo della sua esistenza:</h2>
-      <p>Mi scusi, ma io che cazzo ne so</p>
+      <p>
+        Questo portale nasce dall'esigenza dei clienti dei nostri clienti, di sapere a che punto siano le spedizioni che hanno ordinato. 
+        Vuol dire che se io sono <strong>Gabriele Trasporti</strong> e <strong>Daniele S.R.L.</strong> che è mio cliente (e sicuramente è un'azienda di tuttofare), 
+        mi ordina un bilico di fascette, vuole sapere a che punto è messo quell'ordine perché quelle fascette gli servono SUBITO. 
+        <br/>
+        Funziona esattamente come se io fossi Amazon.
+        <h2>Sezioni principali</h2>
+        Di per se il portale ha solo la pagina delle spedizioni, quella dei file dei clienti e quella degli utenti nel caso l'utente sia admin.
+        <img src="../assets/Api app e portali/homeportaletracking.png"/>
+        Questa è la pagina delle spedizioni e sono visibili tutti gli ordini del cliente selezionato o di tutti (nel caso dell'admin) che si possono filtrare in tranquillità (circa, perché quei filtri sono la mia peggior creazione).
+        <br/>
+        <br/>
+        Poi abbiamo la sezione dei file dove si possono caricare e scaricare file da condividere con il cliente:
+        <img src="../assets/Api app e portali/paginafiletracking.png"/>
+        <br/>
+        <br/>
+        Poi abbiamo la sezione degli utenti dove si possono creare liberamente da un qualsiasi utente admin e si possono assegnare a clienti specifici:
+        <img src="../assets/Api app e portali/paginautentitracking.png"/>
+        <br/>
+        <br/>
+        <strong>SOLO</strong> tramite impostazione, si possono inserire delle richieste da parte degli utenti tramite la pagina apposita:
+        <img src="../assets/Api app e portali/paginarichiestetracking.png"/>
+        <img src="../assets/Api app e portali/inserimentorichiestatracking.png"/>
+        <br/>
+        <br/>
+        Una cosa da tenere a mente è che questo portale è pieno di personalizzazioni specifiche per il cliente. Quindi occhio quando toccate.
+        <br/>
+        Infine c'è la possibilità di controllare lo stato di una spedizione senza avere un account ma solo tramite il codice tracking generato dal nostro programma:
+        <img src="../assets/Api app e portali/bottone-ricerca-tracking.png"/>
+        Tramite questo bottone si apre quest'altra pagina nella quale va inserito il codice:
+        <img src="../assets/Api app e portali/pagina-ricerca-tracking.png"/>
+      </p>
     </section>
   </div>
 </body>
