Documentazione varia portali

--- a/API e Applicazioni/portale-crm.html
+++ b/API e Applicazioni/portale-crm.html
@@ -15,7 +15,36 @@
 
     <section>
       <h2>Motivo della sua esistenza:</h2>
-      <p>Bellissimo portale che nasce come qualsiasi altro CRM e cioè per avere una gestione più precisa degli agenti e delle loro attività.</p>
+      Bellissimo portale che nasce come qualsiasi altro CRM e cioè per avere una gestione più precisa degli agenti e delle loro attività.
+      <img src="../assets/Api app e portali/home-crm.png"/>
+      
+      Appena aperto si capita sulla pagina delle statistiche che indica gli andamenti del mese selezionato e l'andamento annuale generale.
+      Oltre a questo c'è anche una serie di clienti persi che sono i clienti per i quali non si hanno avuto ordini negli ultimi 3 mesi.
+      <img src="../assets/Api app e portali/pagina-statistiche-crm.png"/>
+      
+      Il menu laterale poi contiene una serie di voci:
+      <img src="../assets/Api app e portali/menu-laterale-crm.png"/>
+      <br/>
+      C'è poi la pagina con il calendario degli agenti e con tutte le attività che si possono pianificare.
+      Ogni attività ha una serie di informazioni e un "questionario finale" che si apre tramite il bottone in basso a destra e che apre una 
+      pagina oscena con un sacco di informazioni apparentemente inutili ma che poi tanto inutili non sono.
+      <img src="../assets/Api app e portali/calendario-attivita-crm.png"/>
+
+      Le stesse attività si possono vedere anche sotto forma di lista
+      <img src="../assets/Api app e portali/pagina-attivita-crm.png"/>
+
+      La sezione dei clienti con la gestione anche dei prospect
+      <img src="../assets/Api app e portali/pagina-clienti-crm.png"/>
+      Oltre a questo nella sezione clienti c'è l'ultima colonna, mezza nascosta, con un pulsante che permette di creare un listino temporaneo 
+      con sconto o maggiorazione sulla base di uno configurato a programma. In pratica, sulle impostazioni del CRM, esiste una che si chiama
+      "Cliente generico" dove va specificato il codice di un cliente che può essere creato a posta per il quale si creano dei listini divisi
+      tra di loro tramite il capo "Contratto". Sulla base di quello viene creato un file excel di esempio da mandare al cliente.
+      <img src="../assets/Api app e portali/bottone-listino-cliente-crm.png"/>
+
+      La pagina degli agenti dove, fin'ora si possono solo guardare intensamente, senza toccare!!!
+      <img src="../assets/Api app e portali/pagina-agenti-crm.png"/>
+
+      Oltre poi alla solita pagina della gestione degli utenti che non sto neanche qua a mostrarvi, avete sicuramente di meglio da fare
     </section>
   </div>
 </body>
