--- a/API e Applicazioni/portale-deposito.html
+++ b/API e Applicazioni/portale-deposito.html
@@ -15,7 +15,11 @@
 
     <section>
       <h2>Motivo della sua esistenza:</h2>
-      <p>Mi scusi, ma io che cazzo ne so</p>
+      <p>
+        Portale creato per TCF nel quale i suoi clienti possono vedere lo stato dei coils richiesti. 
+        Sarò sincero, non trovo il link di collegamento quindi non ho nessuna foto ma raramente fa 
+        richieste, funziona tutto abbastanza bene.
+      </p>
     </section>
   </div>
 </body>
