Migliorata documentazione delle app e portali

--- a/API e Applicazioni/applicazioni-portali.html
+++ b/API e Applicazioni/applicazioni-portali.html
@@ -23,7 +23,38 @@
           <li><a href="portale-crm.html">Portale CRM</a></li>
           <li><a href="portale-deposito.html">Portale Deposito (TCF)</a></li>
           <br/>
-          <h3>Regole generali dei portali:</h3>
+
+          <h3>👨🏻‍💻 Comandi per compilare i programmi flutter:</h3>
+          Ci sono alcuni comandi specifici per la compilazione dei programmi flutter:
+          <ul>
+            <li>
+              Creare le funzioni FROM e TO JSON automatiche utilizzando il pacchetto build
+              <pre><code>dart run build_runner build --delete-conflicting-outputs</code></pre>
+            </li>
+            <li>
+              Per compilare l'app in Android
+              <pre><code>flutter build appbundle</code></pre>
+            </li>
+            <li>
+              Per compilare l'app in iOS
+              <pre><code>flutter build ios</code></pre>
+              Poi andate su XCode e premete <strong>Archive</strong> e aspettate che compili
+            </li>
+            <li>
+              Per compilare i portali in web
+              <pre><code>flutter build web --no-tree-shake-icons</code></pre>
+            </li>
+            <li>
+              Per compilare l'app in Windows
+              <pre><code>flutter build windows</code></pre>
+              e poi cercate la cartella da condividere su questo percorso:
+              <pre><code>{PERCORSO DEL PROGETTO}/build/windows/x64/runner\Release\app_horizon_tir.exe</code></pre>
+            </li>
+          </ul>
+          
+          <br/>
+
+          <h3>📜 Regole generali dei portali:</h3>
           I portali, a differenza delle applicazioni, si collegano alle API tramite il file <strong>config.json</strong> che appare così:
           <br/>
           <pre><code>
