Finita documentazione deposito

--- a/Deposito/deposito-logistico.html
+++ b/Deposito/deposito-logistico.html
@@ -152,6 +152,23 @@
         <li>Cancella Riga: elimina la riga</li>
       </ul>
 
+      <h2>ATTENZIONE</h2>
+      <h3>Gestione tramite griglia</h3>
+      <p>
+        Ho creato una cosa bellissima chiamata la Gestione della Quantità tramite Griglia.
+        Si attiva con questa impostazione:
+        <img src="../assets/deposito/impostazione-gestione-griglia.png"/>
+        Tramite questa impostazione la quantità del movimento viene visualizzata diversamente, e cioè così:
+        <img src="../assets/deposito/griglia-ramificata.png"/>
+        Le cose particolari sono che la quantità, come in questo caso, se scrivo 2 bancali con 10 confezioni, vuol dire che in ogni bancale ci sono 5 confezioni.
+        <br/>
+        Poi per riordinare le cose si usa il trascinamento e quindi si possono spostare interi colli all'interno di altri bancali o all'esterno, cosa non fattibile
+        con l'altra visualizzazione.
+        <br/>
+        Altra cosa particolare è che la posizione si seleziona facendo doppio click su questa colonna (solo se la relativa imposazione è attiva)
+        <img src="../assets/deposito/doppio-click-posizione.png"/>
+      </p>
+
       <h4>Salvare una movimentazione:</h4>
       <p>
         Una volta compilata la movimentazione e costruito l'albero con gli oggetti della stessa per salvare devo premere uno dei 3 bottoni presenti nella barra in alto.
